--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,8 +22,8 @@ swc_ecma_parser = "0.105.0"
 #swc_common = {git="https://github.com/swc-project/swc", features=["tty-emitter"]}
 swc_common = {version = "0.18.8", features = ["tty-emitter"]}
 swc_ecma_minifier = "0.118.0"
-hirofa_utils = {git = "https://github.com/HiRoFa/utils"}
-#hirofa_utils = "0.5"
+#hirofa_utils = {git = "https://github.com/HiRoFa/utils"}
+hirofa_utils = "0.5"
 #hirofa_utils = {path = "../utils"}
 serde_json = "1.0"
 log = "0.4"
@@ -39,5 +39,5 @@ default-features = false # Disable features which are enabled by default
 features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
 
 [dev-dependencies.quickjs_runtime]
-git = "https://github.com/HiRoFa/quickjs_es_runtime"
+version = "0.8"
 #path = "../quickjs_es_runtime"
