--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,8 +23,10 @@ swc_ecma_parser = "0.123"
 swc_common = {version = "0.29", features = ["tty-emitter"]}
 swc_ecma_minifier = "0.160"
 #hirofa_utils = {git = "https://github.com/HiRoFa/utils"}
-hirofa_utils = "0.6"
+#hirofa_utils = "0.6"
 #hirofa_utils = {path = "../utils"}
+#quickjs_runtime = {path = "../quickjs_es_runtime"}
+quickjs_runtime = {git = "https://github.com/HiRoFa/quickjs_es_runtime"}
 serde_json = "1.0"
 log = "0.4"
 futures = "0.3"
@@ -37,7 +39,3 @@ simple-logging = "2"
 version = "1.5.0"
 default-features = false # Disable features which are enabled by default
 features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy"]
-
-[dev-dependencies.quickjs_runtime]
-version = "0.9"
-#path = "../quickjs_es_runtime"
